--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,7 @@ nav .fa-solid{
 @media only screen and (max-width: 600px) {
     #header{
         background-image: url(images/phone-background.jpg);
+        background-size: cover;
         width: 100%;
     }
     .header-text{
@@ -379,28 +380,20 @@ nav .fa-solid{
     }
     .about-col-1, .about-col-2{
         flex-basis: 100%;
-        display: flex;
-        flex-direction: column; 
-        align-items: center; 
-        text-align: center;
     }
     .about-col-1{
         margin-bottom: 30px;
     }
     .about-col-1 img{
         width: 100%;
-        max-width: 100%; 
-        height: auto;
     }
     .about-col-2{
         font-size: 14px;
     }
     .services-list, .work-list {
         display: block;
-        margin-left: 20px; 
-    }
-    .services-list li, .work-list li {
-        margin-bottom: 10px;
+        width: 100%; 
+        margin-top: 20px; 
     }
     .tab-links{
         font-size: 16px;
